ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.1.96.9/32
    - ipBlock:  
        cidr: 10.1.96.10/32
    - ipBlock:
        cidr: 10.1.96.11/32
  - from:
      podSelector: {}
